	* src/test/Makefile.am: Updated accordingly.

	* Makefile.am:
	* configure.ac: configure in tools/.

2011-01-14 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/nautilus-actions-new.c:
	* src/utils/nautilus-actions-run.c:
	* src/utils/nautilus-actions-schemas.c: Add locale.h include.

2011-01-12 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Enable silent rules by default.

	* README-GCONF:
	* src/utils/na-gconf2key.sh.in: Fix two key label conversions.

	* src/api/na-boxed.h:
	* src/core/na-boxed.c: New files.

	* src/api/Makefile.am:
	* src/core/Makefile.am: Updated accordingly.

2011-01-10 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-data-types.h:
	* src/core/na-data-types.c
	(na_data_types_copy, na_data_types_free, na_data_types_get_label):
	New functions.

	* src/core/na-settings.c
	(monitor_io_provider_read_status, monitor_key): Register monitored keys.

	* src/core/na-settings.h
	(na_settings_get_boolean_ex, na_settings_get_string_list):
	New functions.

	* src/plugin-menu/nautilus-actions.c:
	Implement runtime preferences monitoring.
	No more use deprecated na_pivot_set_automatic_reload().

	* src/core/na-pivot.c:
	* src/core/na-pivot.h:
	Replace GConf preferences monitoring with NASettings.
	Define new PIVOT_SIGNAL_ITEMS_CHANGED signal.

	* src/core/na-settings.c:
	* src/core/na-settings.h
	(na_settings_register_key_callback,
	na_settings_register_global_callback, na_settings_get_boolean):
	New functions.

	* src/api/na-iio-provider.h:
	* src/core/na-io-provider.h: IIO_PROVIDER_SIGNAL_ITEM_CHANGED signal
	definition is moved (and renamed) from public API to internal one.

	* src/core/na-iio-provider.c (interface_base_init):
	* src/core/na-io-provider.c (io_provider_set_provider):
	* src/core/na-pivot.c (on_item_changed_timeout): Updated accordingly.

	* src/core/na-iio-provider.c
	* src/core/na-settings.c (na_settings_new):
	* src/utils/na-gconf2key.sh.in: Global configuration file goes to /etc/xdg.

	* src/core/na-pivot.c: