@@ -49,94 +49,8 @@ static FactoryType st_factory_type[] = {
 		{ NAFD_TYPE_STRING_LIST,   "string list",   "list" },
 		{ NAFD_TYPE_POINTER,       "pointer",        NULL },
 		{ NAFD_TYPE_UINT,          "uint",          "int" },
-		{ NAFD_TYPE_MAP,           "map",           "string" },
 		{ 0 }
 };
-
-/**
- * na_data_types_copy:
- * @value: the value to be duplicated.
- * @type: the FactoryData type.
- *
- * Returns: a new occurrence of the value which should be na_data_types_free()
- * by the caller.
- *
- * Since: 3.1.0
- */
-gpointer
-na_data_types_copy( gpointer value, guint type )
-{
-	static const gchar *thisfn = "na_data_types_copy";
-	gpointer new_value;
-
-	switch( type ){
-
-		case NAFD_TYPE_STRING:
-		case NAFD_TYPE_LOCALE_STRING:
-		case NAFD_TYPE_MAP:
-			new_value = g_strdup(( const gchar * ) value );
-			break;
-
-		case NAFD_TYPE_BOOLEAN:
-		case NAFD_TYPE_UINT:
-			new_value = GUINT_TO_POINTER( GPOINTER_TO_UINT( value ));
-			break;
-
-		case NAFD_TYPE_POINTER:
-			g_warning( "%s: unmanaged data type: %s", thisfn, na_data_types_get_label( type ));
-			new_value = NULL;
-			break;
-
-		case NAFD_TYPE_STRING_LIST:
-			new_value = na_core_utils_slist_duplicate(( GSList * ) value );
-			break;
-
-		default:
-			g_warning( "%s: unknown data type: %d", thisfn, type );
-			new_value = NULL;
-	}
-
-	return( new_value );
-}
-
-/**
- * na_data_types_free:
- * @value: the value to be released.
- * @type: the FactoryData type.
- *
- * Release the value.
- *
- * Since: 3.1.0
- */
-void
-na_data_types_free( gpointer value, guint type )
-{
-	static const gchar *thisfn = "na_data_types_free";
-
-	switch( type ){
-
-		case NAFD_TYPE_STRING:
-		case NAFD_TYPE_LOCALE_STRING:
-		case NAFD_TYPE_MAP:
-			g_free( value );
-			break;
-
-		case NAFD_TYPE_BOOLEAN:
-		case NAFD_TYPE_UINT:
-			break;
-
-		case NAFD_TYPE_POINTER:
-			g_warning( "%s: unmanaged data type: %s", thisfn, na_data_types_get_label( type ));
-			break;
-
-		case NAFD_TYPE_STRING_LIST:
-			na_core_utils_slist_free(( GSList * ) value );
-			break;
-
-		default:
-			g_warning( "%s: unknown data type: %d", thisfn, type );
-	}
-}
 
 /**
  * na_data_types_get_gconf_dump_key:
