@@ -33,6 +33,10 @@
 
 	* configure.ac: Enable silent rules by default.
 
+	* src/api/na-data-types.h:
+	* src/core/na-data-types.c
+	(na_data_types_copy, na_data_types_free): Removed functions.
+
 	* README-GCONF:
 	* src/utils/na-gconf2key.sh.in: Fix two key label conversions.
 
